Closed
Bug 366537
Opened 19 years ago
Closed 19 years ago
[FIX]"ASSERTION: How did our kid's height change if nothing was dirty?"
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
502 bytes,
application/xhtml+xml
|
Details | |
|
2.02 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
Loading the testcase triggers an assertion:
###!!! ASSERTION: How did our kid's height change if nothing was dirty?: 'oldVisibleHeight == GetScrolledFrame()->GetSize().height', file /Users/admin/trunk/mozilla/layout/forms/nsListControlFrame.cpp, line 674
| Reporter | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 2•19 years ago
|
||
Fieldsets weren't propagating their dirty bits correctly -- they were just marking their parent as having a dirty child, when they should be marking the entire ancestor chain.
Attachment #251086 -
Flags: superreview?(dbaron)
Attachment #251086 -
Flags: review?(dbaron)
| Assignee | ||
Updated•19 years ago
|
Assignee: nobody → bzbarsky
OS: Mac OS X → All
Hardware: Macintosh → All
Summary: "ASSERTION: How did our kid's height change if nothing was dirty?" → [FIX]"ASSERTION: How did our kid's height change if nothing was dirty?"
Attachment #251086 -
Flags: superreview?(dbaron)
Attachment #251086 -
Flags: superreview+
Attachment #251086 -
Flags: review?(dbaron)
Attachment #251086 -
Flags: review+
| Assignee | ||
Comment 3•19 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•