Notify correctly about legend frames being added -- need to mark all our ancestors as having a dirty child, not just the immediate ancestor.  Bug 366537, r+sr=dbaron